Bug 456465 - 'Launch without taking a screenshot' option from the context menu of Spectacle icon pinned to task manager does not work consistently
Summary: 'Launch without taking a screenshot' option from the context menu of Spectacl...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 22.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-07 23:03 UTC by Patrick Silva
Modified: 2022-10-05 07:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-07-07 23:03:48 UTC
STEPS TO REPRODUCE
1. use Wayland session - not tested X11 yet
2. open Spectacle by pressing printscreen key
3. right-click on Spectacle icon in the task manager and choose 'Pin to task manager'
4. close Spectacle
5. right-click on Spectacle icon pinned to task manager and choose 'Launch without taking a screenshot' option

OBSERVED RESULT
Inconsistent results.
1. Sometimes Plasma shows the following notification:
"Full screen captured
A screenshot was copied to your clipnoard."

But in fact nothing is copied to clipboard.

2. Sometimes nothing happens

3. Sometimes Spectacle opens without taking a screenshot, as expected.

EXPECTED RESULT
Spectacle always opens without taking a screenshot

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 1 Patrick Silva 2022-07-07 23:13:35 UTC
Can reproduce on X11 too.
Comment 2 Nate Graham 2022-07-13 18:23:49 UTC
Can reproduce. When I reproduce the issue, the `spectacle` has launched, but failed to show its main window.
Comment 3 Bug Janitor Service 2022-10-02 13:35:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/152
Comment 4 Bharadwaj Raju 2022-10-03 09:56:09 UTC
Git commit a7c86fe5474f14764c0998a1c62b30c327603592 by Bharadwaj Raju.
Committed on 03/10/2022 at 09:56.
Pushed by bharadwaj-raju into branch 'master'.

Make sure to switch start mode to GUI when initiating GUI

Needed for cases where we're asked to launch the GUI but over DBus, like OpenWithoutScreenshot.

M  +3    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/a7c86fe5474f14764c0998a1c62b30c327603592