Make sure to switch start mode to GUI when initiating GUI

Needed for cases where we're asked to launch the GUI but over DBus, like OpenWithoutScreenshot.

BUG: 456465